--- a/first_steps.ipynb
+++ b/first_steps.ipynb
@@ -1815,9 +1815,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python-intro",
    "language": "python",
-   "name": "python3"
+   "name": "python-intro"
   },
   "language_info": {
    "codemirror_mode": {
