--- a/functions_and_classes.ipynb
+++ b/functions_and_classes.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "amino-legend",
    "metadata": {
     "slideshow": {
@@ -73,7 +73,7 @@
     "- But we can also **define our own functions**.\n",
     "\n",
     "$$\n",
-    "f(x)=\\begin{cases}\\exp(x) & \\text{if $x\\leq0$}\\\\ \\cos(x) & \\text{if $x>0$}\\end{cases}\n",
+    "f(x)=\\begin{cases}\\cos(x)& \\text{if $x<0$}\\\\ \\exp(-x)& \\text{if $x\\geq0$}\\end{cases}\n",
     "$$\n",
     "\n",
     "### Defining a function"
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "developing-affairs",
    "metadata": {
     "slideshow": {
@@ -91,9 +91,9 @@
    "outputs": [],
    "source": [
     "def f(x):\n",
-    "    if x <= 0:\n",
-    "        return np.exp(x)\n",
-    "    return np.cos(x)"
+    "    if x < 0:\n",
+    "        return np.cos(x)\n",
+    "    return np.exp(-x)"
    ]
   },
   {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "numerical-pharmacology",
    "metadata": {
     "slideshow": {
@@ -122,7 +122,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f(3) = -0.9899924966004454\n"
+      "f(3) = 0.049787068367863944\n"
      ]
     }
    ],
@@ -196,13 +196,13 @@
     "### An example\n",
     "\n",
     "\n",
-    "- Implement function $f_{a,b}(x,y)=a\\cos(\\pi x+b y)$.\n",
+    "- Implement function $h_{a,b}(x,y)=a\\cos(\\pi x+b y)$.\n",
     "- The parameters should have default $a=1$ and $b=2$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "palestinian-threshold",
    "metadata": {
     "slideshow": {
@@ -223,13 +223,13 @@
     }
    ],
    "source": [
-    "def f(x, y, a=1, b=2):\n",
+    "def h(x, y, a=1, b=2):\n",
     "      return a * np.cos(np.pi * x + b * y)\n",
-    "print(f(1, 2))                             # Use defaults.\n",
-    "print(f(1, 2, a=1, b=2))                   # Equivalent to above call.\n",
-    "print(f(1, 2, a=2))                        # Use non-default values for a.\n",
-    "print(f(1, 2, b=1))                        # Use non-default values for b.\n",
-    "print(f(1, 2, a=2, b=1))                   # Use non-default values for both a and b."
+    "print(h(1, 2))                             # Use defaults.\n",
+    "print(h(1, 2, a=1, b=2))                   # Equivalent to above call.\n",
+    "print(h(1, 2, a=2))                        # Use non-default values for a.\n",
+    "print(h(1, 2, b=1))                        # Use non-default values for b.\n",
+    "print(h(1, 2, a=2, b=1))                   # Use non-default values for both a and b."
    ]
   },
   {
@@ -499,6 +499,140 @@
   },
   {
    "cell_type": "markdown",
+   "id": "invalid-hybrid",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "---\n",
+    "## <a name=\"ex2\"></a>Exercise 2\n",
+    "The function `f`, which we wrote earlier in this notebook, implements the following function\n",
+    "\n",
+    "$$\n",
+    "f(x)=\\begin{cases}\\cos(x) & \\text{if $x<0$}\\\\ \\exp(-x)& \\text{if $x\\geq0$}\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "- Derive an analytic expression (by hand) for the first derivative of $f(x)$ and implement it in a Python function `f_prime(x)`.\n",
+    "\n",
+    "- Implement a Python function `numerical_derivative(g, x, d)`, which for any function $g$, numerically computes an approximate derivative as follows:\n",
+    "\n",
+    "$$\\mathrm{numerical\\_derivative}(g,x,d)=\\frac{g(x+d)-g(x-d)}{2d}$$\n",
+    "\n",
+    "- Compare the two derivatives for different values of $x$ and $d$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "south-northern",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "<a href=\"#ex2sol\">Solution for Exercise 2</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "elementary-equilibrium",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "---\n",
+    "## Classes\n",
+    "\n",
+    "- In Python, everything is an **object instantiating a class**.\n",
+    "\n",
+    "### A very simply class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "brazilian-phrase",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6/2/2023\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Date(object):\n",
+    "    def __init__(self, day, month, year):\n",
+    "        self.day = day\n",
+    "        self.month = month\n",
+    "        self.year = year\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f'{self.day}/{self.month}/{self.year}'\n",
+    "    \n",
+    "    def _days_in_month(self):\n",
+    "        if self.month == 2:\n",
+    "            if self.year % 4 == 0 and (self.year % 100 != 0 or self.year % 400 != 0):\n",
+    "                return 29\n",
+    "            else:\n",
+    "                return 28\n",
+    "        elif self.month in {1, 3, 5, 7, 8, 10, 12}:\n",
+    "            return 31\n",
+    "        else:\n",
+    "            return 20\n",
+    "    \n",
+    "    def add_years(self, num_years):\n",
+    "        self.year += num_years\n",
+    "    \n",
+    "    def add_months(self, num_months):\n",
+    "        while num_months + self.month > 12:\n",
+    "            num_months -= (12 - self.month) + 1\n",
+    "            self.month = 1\n",
+    "            self.add_years(1)\n",
+    "        self.month += num_months\n",
+    "        \n",
+    "    def add_days(self, num_days):\n",
+    "        while num_days + self.day > self._days_in_month():\n",
+    "            num_days -= (self._days_in_month() - self.day) + 1\n",
+    "            self.day = 1\n",
+    "            self.add_months(1)\n",
+    "        self.day += num_days\n",
+    "            \n",
+    "    \n",
+    "date = Date(28,12,2021)\n",
+    "date.add_days(365)\n",
+    "print(date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "naval-workstation",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "12 // 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "associate-cooperation",
    "metadata": {
     "slideshow": {
@@ -557,14 +691,85 @@
    "source": [
     "<a href=\"#ex1\">Back to Exercise 1</a>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "happy-imperial",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<a name=\"ex2sol\">Solution for Exercise 2</a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "leading-mumbai",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f'(1) = -0.36787944117144233\n",
+      "numeric_derivative(f, 1, 0.001) = -0.3678795024846526\n",
+      "numeric_derivative(f, 1, 1) = -0.43233235838169365\n",
+      "---\n",
+      "f'(-5) = -0.9589242746631385\n",
+      "numeric_derivative(f, -5, 0.001) = -0.9589241148427741\n",
+      "numeric_derivative(f, -5, 1) = -0.8069069537569891\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f_prime(x):\n",
+    "    if x < 0:\n",
+    "        return -np.sin(x)\n",
+    "    return -np.exp(-x)\n",
+    "\n",
+    "def numeric_derivative(g, x, d):\n",
+    "    return (g(x + d) - g(x - d))/(2 * d)\n",
+    "\n",
+    "x = 1\n",
+    "print(f\"f'({x}) = {f_prime(x)}\")\n",
+    "d=0.001\n",
+    "print(f\"numeric_derivative(f, {x}, {d}) = {numeric_derivative(f, x, d)}\")\n",
+    "d=1\n",
+    "print(f\"numeric_derivative(f, {x}, {d}) = {numeric_derivative(f, x, d)}\")\n",
+    "x = -5\n",
+    "d=0.001\n",
+    "print(f\"---\\nf'({x}) = {f_prime(x)}\")\n",
+    "print(f\"numeric_derivative(f, {x}, {d}) = {numeric_derivative(f, x, d)}\")\n",
+    "d=1\n",
+    "print(f\"numeric_derivative(f, {x}, {d}) = {numeric_derivative(f, x, d)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "hawaiian-status",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "<a href=\"#ex2\">Back to Exercise 2</a>"
+   ]
   }
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python-intro",
    "language": "python",
-   "name": "python3"
+   "name": "python-intro"
   },
   "language_info": {
    "codemirror_mode": {
