--- a/visualization_with_seaborn.ipynb
+++ b/visualization_with_seaborn.ipynb
@@ -84,7 +84,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "black-stable",
    "metadata": {},
@@ -2452,9 +2451,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "firstEnv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "firstenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2466,7 +2465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
