--- a/functions_and_classes.ipynb
+++ b/functions_and_classes.ipynb
@@ -36,8 +36,7 @@
     "\n",
     "- Proper documentation of classes and functions via docstrings.\n",
     "- Inheritence / derived classes.\n",
-    "- Abstract classes.\n",
-    "- Static methods."
+    "- Abstract classes."
    ]
   },
   {
@@ -548,87 +547,305 @@
     "## Classes\n",
     "\n",
     "- In Python, everything is an **object instantiating a class**.\n",
+    "- Classes have **member variables** (used to store data) and **member functions**.\n",
+    "- Unlike in other programming languages, **all members variables and functions are public**.\n",
+    "- **Convention:** members starting with **_** should not (but can) be accessed from outside the class.\n",
     "\n",
     "### A very simply class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "id": "brazilian-phrase",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Date(object):\n",
+    "    \n",
+    "    # Constructor, called when creating a Date object.\n",
+    "    def __init__(self, day, month, year):\n",
+    "        self.day = day       # A member variable.\n",
+    "        self.month = month   # Another member variable.\n",
+    "        self.year = year     # Yet another member variable.\n",
+    "    \n",
+    "    # Returns a unique string representation of the object. \n",
+    "    # Should contain enough information to allow reconstructing the object.\n",
+    "    def __repr__(self):\n",
+    "        return f'{self.day}/{self.month}/{self.year}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "outdoor-probability",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### So far, our `Date` class cannot do much"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "naval-workstation",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25/3/2021\n",
+      "25/3/2020\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Construct a Date object.\n",
+    "date = Date(25,3,2021)\n",
+    "print(date)\n",
+    "# Change one of its member variables.\n",
+    "date.year = 2020\n",
+    "print(date)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "possible-wings",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Implementing `==`, `!=`, `<`, `>`, `<=`, and `>=`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "enhanced-ecuador",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Date(object):\n",
+    "    \n",
+    "    # Constructor, called when creating a Date object.\n",
+    "    def __init__(self, day, month, year):\n",
+    "        self.day = day       # A member variable.\n",
+    "        self.month = month   # Another member variable.\n",
+    "        self.year = year     # Yet another member variable.\n",
+    "    \n",
+    "    # Returns a unique string representation of the object. \n",
+    "    # Should contain enough information to allow reconstructing the object.\n",
+    "    def __repr__(self):\n",
+    "        return f'{self.day}/{self.month}/{self.year}'\n",
+    "    \n",
+    "    # Should return True if (self == other).\n",
+    "    def __eq__(self, other):\n",
+    "        return self.day == other.day and self.month == other.month and self.year == other.year\n",
+    "    \n",
+    "    # Should return (self < other).\n",
+    "    def __lt__(self, other):\n",
+    "        if self.year < other.year:\n",
+    "            return True\n",
+    "        elif self.year > other.year:\n",
+    "            return False\n",
+    "        elif self.month < other.month:\n",
+    "            return True\n",
+    "        elif self.month > other.month:\n",
+    "            return False\n",
+    "        elif self.day < other.day:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    \n",
+    "    # Should return (self <= other).\n",
+    "    def __le__(self, other):\n",
+    "        return self.__lt__(other) or self.__eq__(other)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dominican-internship",
+   "metadata": {},
+   "source": [
+    "### Example usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "favorite-preference",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6/2/2023\n"
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "class Date(object):\n",
-    "    def __init__(self, day, month, year):\n",
-    "        self.day = day\n",
-    "        self.month = month\n",
-    "        self.year = year\n",
-    "    \n",
-    "    def __str__(self):\n",
-    "        return f'{self.day}/{self.month}/{self.year}'\n",
-    "    \n",
-    "    def _days_in_month(self):\n",
-    "        if self.month == 2:\n",
-    "            if self.year % 4 == 0 and (self.year % 100 != 0 or self.year % 400 != 0):\n",
-    "                return 29\n",
-    "            else:\n",
-    "                return 28\n",
-    "        elif self.month in {1, 3, 5, 7, 8, 10, 12}:\n",
-    "            return 31\n",
-    "        else:\n",
-    "            return 20\n",
-    "    \n",
-    "    def add_years(self, num_years):\n",
-    "        self.year += num_years\n",
-    "    \n",
-    "    def add_months(self, num_months):\n",
-    "        while num_months + self.month > 12:\n",
-    "            num_months -= (12 - self.month) + 1\n",
-    "            self.month = 1\n",
-    "            self.add_years(1)\n",
-    "        self.month += num_months\n",
-    "        \n",
-    "    def add_days(self, num_days):\n",
-    "        while num_days + self.day > self._days_in_month():\n",
-    "            num_days -= (self._days_in_month() - self.day) + 1\n",
-    "            self.day = 1\n",
-    "            self.add_months(1)\n",
-    "        self.day += num_days\n",
-    "            \n",
-    "    \n",
-    "date = Date(28,12,2021)\n",
-    "date.add_days(365)\n",
-    "print(date)"
+    "date_1 = Date(29,10,2017) # A date.\n",
+    "date_2 = Date(3,4,2001)   # Another date.\n",
+    "print(date_1 == date_2)   # Calls date_1.__eq__(date_2).\n",
+    "print(date_1 != date_2)   # Calls date_1.__ne__(date_2). The implementation of __ne__() is inferred from __eq__().\n",
+    "print(date_1 < date_2)    # Calls date_1.__lt__(date_2).\n",
+    "print(date_1 > date_2)    # Calls date_1.__gt__(date_2). The implementation of __gt__() is inferred from __lt__().\n",
+    "print(date_1 <= date_2)   # Calls date_1.__le__(date_2).\n",
+    "print(date_1 >= date_2)   # Calls date_1.__ge__(date_2). The implementation of __ge__() is inferred from __le__()."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adjustable-genome",
+   "metadata": {},
+   "source": [
+    "### Static variables and methods\n",
+    "\n",
+    "- Static variables and methods are defined and accessed on the **class level** rather than on the instance level.\n",
+    "- They **cannot use data stored in class instances**. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "naval-workstation",
+   "execution_count": 116,
+   "id": "arbitrary-science",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Date(object):\n",
+    "    \n",
+    "    \n",
+    "    # Two static variables.\n",
+    "    month_name_to_number = {'January': 1, 'February': 2, 'March': 3, 'April': 4, 'May': 5, 'June': 6, 'July': 7, \n",
+    "                            'August': 8, 'September': 9, 'October': 10, 'November': 11, 'December': 12}\n",
+    "    month_abbrv_to_number = {month[:3]: number for month, number in Date.month_name_to_number.items()}\n",
+    "    \n",
+    "    # A static method.\n",
+    "    @staticmethod\n",
+    "    def get_month_number(month):\n",
+    "        month_name_or_abbrv = month[0].upper() + month[1:].lower()\n",
+    "        number = None\n",
+    "        if len(month_name_or_abbrv) <= 3:\n",
+    "            number = Date.month_abbrv_to_number.get(month_name_or_abbrv)\n",
+    "        else:\n",
+    "            number = Date.month_name_to_number.get(month_name_or_abbrv)\n",
+    "        if number:\n",
+    "            return number\n",
+    "        else:\n",
+    "            print(f'WARNING: Invalid month {month}.')\n",
+    "    \n",
+    "    def __init__(self, day, month, year):\n",
+    "        self.day = day       \n",
+    "        self.month = month   \n",
+    "        self.year = year     \n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f'{self.day}/{self.month}/{self.year}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efficient-ecology",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Using static variables and functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "qualified-layout",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'January': 1, 'February': 2, 'March': 3, 'April': 4, 'May': 5, 'June': 6, 'July': 7, 'August': 8, 'September': 9, 'October': 10, 'November': 11, 'December': 12}\n",
+      "{'Jan': 1, 'Feb': 2, 'Mar': 3, 'Apr': 4, 'May': 5, 'Jun': 6, 'Jul': 7, 'Aug': 8, 'Sep': 9, 'Oct': 10, 'Nov': 11, 'Dec': 12}\n",
+      "1\n"
+     ]
     }
    ],
    "source": [
-    "12 // 12"
+    "print(Date.month_name_to_number)        # Access static variable.\n",
+    "print(Date.month_abbrv_to_number)       # Access static variable.\n",
+    "print(Date.get_month_number(\"January\")) # Access static function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "constant-terry",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "---\n",
+    "## <a name=\"ex3\"></a>Exercise 3\n",
+    "\n",
+    "- Extend the constructor of `Date` such that it also accepts month names and three letter abbreviations.\n",
+    "- Extend the `Date` class with two member functions `days_in_current_month()` and `is_valid()`.\n",
+    "  - The function `days_in_current_month()` should return the number of days in the current month (pay attention to take care of leap years).\n",
+    "  - The function `is_valid()` should return True if the date is valid and False otherwise.\n",
+    "- Extend the constructor of `Date` such that it prints a warning if the constructed date is invalid.\n",
+    "- Test the newly implemented functionality."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "unlike-liquid",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "demanding-adams",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "<a href=\"#ex3sol\">Solution for Exercise 3</a>"
    ]
   },
   {
@@ -761,6 +978,124 @@
    },
    "source": [
     "<a href=\"#ex2\">Back to Exercise 2</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "angry-category",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<a name=\"ex3sol\">Solution for Exercise 3</a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "realistic-alliance",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: 29/2/2021 is no valid date.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Date(object):\n",
+    "    \n",
+    "    month_name_to_number = {'January': 1, 'February': 2, 'March': 3, 'April': 4, 'May': 5, 'June': 6, 'July': 7, \n",
+    "                            'August': 8, 'September': 9, 'October': 10, 'November': 11, 'December': 12}\n",
+    "    month_abbrv_to_number = {month[:3]: number for month, number in Date.month_name_to_number.items()}\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def get_month_number(month):\n",
+    "        month_name_or_abbrv = month[0].upper() + month[1:].lower()\n",
+    "        number = None\n",
+    "        if len(month_name_or_abbrv) <= 3:\n",
+    "            number = Date.month_abbrv_to_number.get(month_name_or_abbrv)\n",
+    "        else:\n",
+    "            number = Date.month_name_to_number.get(month_name_or_abbrv)\n",
+    "        if number:\n",
+    "            return number\n",
+    "        else:\n",
+    "            print(f'WARNING: Invalid month {month}.')\n",
+    "    \n",
+    "    def __init__(self, day, month, year):\n",
+    "        self.day = day\n",
+    "        if isinstance(month, str):\n",
+    "            month = self.get_month_number(month)\n",
+    "        self.month = month\n",
+    "        self.year = year\n",
+    "        if not self.is_valid():\n",
+    "            print(f'WARNING: {self} is no valid date.')\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f'{self.day}/{self.month}/{self.year}'\n",
+    "    \n",
+    "    def __eq__(self, other):\n",
+    "        return self.day == other.day and self.month == other.month and self.year == other.year\n",
+    "    \n",
+    "    def __lt__(self, other):\n",
+    "        if self.year < other.year:\n",
+    "            return True\n",
+    "        elif self.year > other.year:\n",
+    "            return False\n",
+    "        elif self.month < other.month:\n",
+    "            return True\n",
+    "        elif self.month > other.month:\n",
+    "            return False\n",
+    "        elif self.day < other.day:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "    def __le__(self, other):\n",
+    "        return self.__lt__(other) or self.__eq__(other)\n",
+    "    \n",
+    "    def current_year_is_leap_year(self):\n",
+    "        return self.year % 4 == 0 and (self.year % 100 != 0 or self.year % 400 == 0)\n",
+    "    \n",
+    "    def days_in_current_month(self):\n",
+    "        if self.month == 2:\n",
+    "            if self.current_year_is_leap_year():\n",
+    "                return 29\n",
+    "            else:\n",
+    "                return 28\n",
+    "        elif self.month in {1, 3, 5, 7, 8, 10, 12}:\n",
+    "            return 31\n",
+    "        else:\n",
+    "            return 20\n",
+    "    \n",
+    "    def is_valid(self):\n",
+    "        valid_year = isinstance(self.year, int)\n",
+    "        valid_month = isinstance(self.month, int) and self.month in range(1, 13)\n",
+    "        valid_day = isinstance(self.day, int) and self.day in range(1, self.days_in_current_month() + 1)\n",
+    "        return valid_year and valid_month and valid_day\n",
+    "    \n",
+    "invalid_date = Date(29, 'Feb', 2021)\n",
+    "valid_date = Date(29,2,2020)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "handed-rocket",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "<a href=\"#ex3\">Back to Exercise 3</a>"
    ]
   }
  ],
