--- a/1_first_steps.ipynb
+++ b/1_first_steps.ipynb
@@ -10,71 +10,12 @@
    },
    "source": [
     "<figure>\n",
-    "  <IMG SRC=\"TUM.png\" WIDTH=250 ALIGN=\"right\">\n",
+    "  <IMG SRC=\"input/TUM.png\" WIDTH=250 ALIGN=\"right\">\n",
     "</figure>\n",
     "\n",
     "# First Steps in Python 3\n",
     "    \n",
     "*David B. Blumenthal, Olga Lazareva*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "judicial-grass",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "---\n",
-    "## Topics covered in this course\n",
-    "\n",
-    "1. **First steps**: numbers, containers, comparisons, Boolean operations, if/else-statements, loops, I/O.\n",
-    "2. **Data handling and scientific computing**: [NumPy](https://numpy.org/), [pandas](https://pandas.pydata.org/).\n",
-    "3. **Functions and classes**: create your own functions and classes.\n",
-    "3. **Plotting**: [seaborn](https://seaborn.pydata.org/).\n",
-    "4. **Analysis of biological data**: [Biopython](https://biopython.org/)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "metallic-diamond",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "---\n",
-    "## Why Python?\n",
-    "\n",
-    "### Python is the most popular programming language in the world\n",
-    "\n",
-    "\n",
-    "|Rank|Language|Share|\n",
-    "|---|---|---|\n",
-    "|1|Python|30.17 %|\n",
-    "|2|Java|17.18 %|\n",
-    "|3|JavaScript|8.21 %|\n",
-    "|4|C#|6.76 %|\n",
-    "|5|C/C++|6.71 %|\n",
-    "\n",
-    "- Data from [PYPL PopularitY of Programming Language Index March 2021](https://pypl.github.io/PYPL.html).\n",
-    "- Based on numbers of Google searches for language tutorials.\n",
-    "\n",
-    "### Some advantages of Python\n",
-    "\n",
-    "- Very **easy syntax**.\n",
-    "- **Multi-purpose** programming language.\n",
-    "- **Powerful packages** for many applications, e.g.:\n",
-    "  - Scientific computing.\n",
-    "  - Data handling.\n",
-    "  - Statistics.\n",
-    "  - Machine learning.\n",
-    "  - Plotting.\n",
-    "- Many packages have **very efficient C, C++, or Fortran backends**. \n",
-    "- $\\Longrightarrow$ Well-designed Python code is often not only easy to read, but also **fast**."
    ]
   },
   {
