--- a/2_data_handling.ipynb
+++ b/2_data_handling.ipynb
@@ -10,7 +10,7 @@
    },
    "source": [
     "<figure>\n",
-    "  <IMG SRC=\"TUM.png\" WIDTH=250 ALIGN=\"right\">\n",
+    "  <IMG SRC=\"input/TUM.png\" WIDTH=250 ALIGN=\"right\">\n",
     "</figure>\n",
     "\n",
     "# Data Handling and Scientific Computing in Python 3\n",
@@ -33,7 +33,7 @@
     "- Python files with the `.py` extension are called **modules**.\n",
     "- Collections of related modules are called **packages**.\n",
     "- There is a huge variety of Python packages for numerous purposed.\n",
-    "- Today, we will learn about two very widely used packages: **NumPy** and **pandas**.\n",
+    "- Today, we will learn about three very widely used packages: **NumPy**, **pandas**, and **SciPy**.\n",
     "\n",
     "---\n",
     "## Syntax for importing packages\n",
@@ -2569,9 +2569,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python-intro",
    "language": "python",
-   "name": "python3"
+   "name": "python-intro"
   },
   "language_info": {
    "codemirror_mode": {
