--- a/3_functions_and_classes.ipynb
+++ b/3_functions_and_classes.ipynb
@@ -10,7 +10,7 @@
    },
    "source": [
     "<figure>\n",
-    "  <IMG SRC=\"TUM.png\" WIDTH=250 ALIGN=\"right\">\n",
+    "  <IMG SRC=\"input/TUM.png\" WIDTH=250 ALIGN=\"right\">\n",
     "</figure>\n",
     "\n",
     "# Functions and Classes in Python 3\n",
