--- a/4_visualization_with_seaborn.ipynb
+++ b/4_visualization_with_seaborn.ipynb
@@ -5,12 +5,12 @@
    "id": "consolidated-orlando",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "slide"
     }
    },
    "source": [
     "<figure>\n",
-    "  <IMG SRC=\"TUM.png\" WIDTH=250 ALIGN=\"right\">\n",
+    "  <IMG SRC=\"input/TUM.png\" WIDTH=250 ALIGN=\"right\">\n",
     "</figure>\n",
     "\n",
     "# Data visualization in Python 3\n",
