--- a/0_overview.ipynb
+++ b/0_overview.ipynb
@@ -234,9 +234,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "python-intro",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python-intro"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -248,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
